--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   font-size: large;
 }
 
+.App .star {
+  color: gold;
+  max-width: 10em;
+  margin: auto;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
